--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.3",
     "classnames": "^2.5.1",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router": "^6.26.0",
@@ -54,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "tailwindcss": "^3.4.9"
   }
 }
